2010-08-08	Richard van den Berg  <richard@vdberg.org>
	* Added mkgitsnapshot.sh to contrib/
	* Released version 0.15
	* Changed version to post-0.15

2010-08-06	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Updated copyright notices of list.h, list.c, md.h, md,c, symboltable.h,
	  symboltable.c, util.h and util.c
	* Escaped '-' that really mean '-' in man pages
	* Updated copyright notices of db_config.h, report.h, url.h, conf_yacc.y,
	  db_lex.l and error.c

2010-08-05	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Updated copyright notices of db_file.h, db_file.c, db_sql.h, db_sql.c,
	  do_md.h, do_md.c, gen_list.h and gen_list.c

2010-08-04	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Updated copyright notices of commandconf.h, commandconf.c, conf_lex.h,
	  conf_lex.l, db.h, db.c and db_list.h

2010-08-03	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Updated copyright notices of aide.h, aide.c, be.c, compare_db.h,
	  compare_db.c and db_disk.c

2010-08-02	Richard van den Berg  <richard@vdberg.org>
	* Removed ], from version string when --with-curl was used, closes bug 3038382

2010-08-01	Richard van den Berg  <richard@vdberg.org>
	* Released version 0.15-rc1
	* Changed version to post-0.15-rc1

2010-07-30	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Removed obsolete compare_db function
	* Updated documentation of the default groups

2010-07-29	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Added ftype and e2fsattrs to the default groups L, R and >

2010-07-25	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fixed sorting of files in report by filename

2010-07-24	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Added new grouped option
	* Sort files in report by filename, see feature request 1337718

2010-07-23	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fixed indent of XAttrs output
	* Fixed report_attributes for XAttrs
	* Fixed indent of ACL output
	* Fixed report_attributes for ACL
	* Fixed report_attributes for Lname and SELinux
